Enhance UI with animated analyze button and consistent styling
- Change button text from 'Analyze Report' to 'Analyze Information'
- Add colorful gradient animations to analyze button during processing
- Add pulse, shimmer, and glow effects for better visual feedback
- Fix Stop Analysis button font size to match other buttons (0.9rem)
- Remove text animation to prevent button size changes and layout shifts
- Update placeholder text to reflect new button name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 </company_report>
 
 2. As you read through the report, pay close attention to:
- - Financial performance metrics
+- Leadership and management team
+- Financial performance metrics
  - Market position and competitive landscape
  - New product or service launches
  - Operational challenges or successes
@@ -53,11 +54,15 @@
 
 <summary_report>
 <executive_summary>
-Provide a brief overview of the company's current state and key highlights from the report.
+Provide thorough overview of the company's current state and key highlights from the report.
 </executive_summary>
 
+<team_members>
+    Provide a list of the company's key team members and their roles.
+</team_members>
+
 <key_performance_indicators>
-List and briefly explain the most important financial and operational metrics from the report.
+List and explain the most important financial and operational metrics from the report. Explain the metrics in a way that is easy to understand and follow.
 </key_performance_indicators>
 
 <market_trends>
@@ -69,7 +74,7 @@ Summarize any AI-related developments mentioned in the report or potential AI ap
 </ai_developments>
 
 <future_outlook>
-Offer a qualitative forecast for the company's future performance based on the information provided.
+Offer a qualitative forecast for the company's future performance based on the information provided. Elaborate on the forecast when needed.
 </future_outlook>
 
 <risks_and_challenges>
@@ -77,7 +82,7 @@ Identify and explain potential operating and revenue risks the company may face 
 </risks_and_challenges>
 
 <conclusion>
-Provide a concise wrap-up of the key takeaways and overall assessment of the company's position.
+Provide a detailed, but high-level wrap-up of the key takeaways and overall assessment of the company's position. Make sure to include the risks and challenges the company may face in the near future and any potential threats to the company's future.
 </conclusion>
 </summary_report>
 
@@ -93,7 +98,7 @@ Ensure that your summary report is clear, concise, and captures all relevant inf
                         <span class="tooltiptext">Clear the analysis prompt and company report fields, and reset the results</span>
                     </div>
                     <div class="tooltip">
-                        <button id="analyzeBtn" class="btn btn-primary">Analyze Report</button>
+                        <button id="analyzeBtn" class="btn btn-primary">Analyze Information</button>
                         <span class="tooltiptext">Send the report to Claude AI for analysis using your custom prompt</span>
                     </div>
                     <div class="tooltip">
