Fix duplicate toast notifications and add team_members section support
- Fixed duplicate ReportAnalyzer initialization causing double toast notifications
- Added team_members section parsing and display support
- Updated toast styling for error/info types to use #D5DBFF background with black text
- Updated success toast styling to use black background with white text

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </company_report>
 
 2. As you read through the report, pay close attention to:
-- Leadership and management team
-- Financial performance metrics
+ - Leadership and management team members and their roles
+ - Financial performance metrics
  - Market position and competitive landscape
  - New product or service launches
  - Operational challenges or successes
@@ -194,6 +194,9 @@ Ensure that your summary report is clear, concise, and captures all relevant inf
             </div>
         </div>
     </div>
+
+    <!-- Toast Container -->
+    <div id="toastContainer" class="toast-container"></div>
 
     <!-- External libraries for OCR -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
